--- a/admin/index.html
+++ b/admin/index.html
@@ -5,117 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HaRié CMS</title>
 
-    <!-- Load Decap CMS the standard way -->
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-
     <style>
+      * {
+        box-sizing: border-box;
+      }
       body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          sans-serif;
         margin: 0;
-        padding: 0;
-        background: #f5f5f5;
+        padding: 20px;
+        min-height: 100vh;
       }
-
-      /* Loading indicator */
-      #loading {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        flex-direction: column;
-        gap: 1rem;
-      }
-
-      .spinner {
-        border: 4px solid #f3f3f3;
-        border-top: 4px solid #3498db;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        animation: spin 2s linear infinite;
-      }
-
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-
-      .error {
-        color: #d32f2f;
-        text-align: center;
-        padding: 2rem;
+      #nc-root {
+        display: block;
       }
     </style>
+
+    <!-- Netlify Identity -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+    <!-- Decap CMS -->
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </head>
   <body>
-    <!-- Loading indicator -->
-    <div id="loading">
-      <div class="spinner"></div>
-      <div>Loading HaRié CMS...</div>
-    </div>
-
-    <!-- Error message container -->
-    <div id="error" style="display: none" class="error"></div>
-
-    <!-- CMS will inject its interface here -->
     <div id="nc-root"></div>
 
     <script>
-      // Wait for the CMS script to load and initialize
-      window.addEventListener("load", function () {
-        console.log("Page loaded, checking for CMS...");
-
-        // Check for CMS in different possible global locations
-        const cms = window.CMS || window.DecapCms || window.decapCMS;
-
-        if (cms) {
-          console.log("✅ CMS found:", cms);
-          try {
-            // Initialize CMS
-            cms.init();
-            console.log("🎉 CMS initialized successfully!");
-
-            // Hide loading indicator after a delay
-            setTimeout(() => {
-              const loading = document.getElementById("loading");
-              if (loading) loading.style.display = "none";
-            }, 2000);
-          } catch (err) {
-            showError("CMS initialization failed: " + err.message);
+      // Netlify Identity redirect
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", (user) => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
           }
-        } else {
-          showError(
-            "CMS library not loaded. Available globals: " +
-              Object.keys(window)
-                .filter((k) => k.includes("CMS") || k.includes("cms"))
-                .join(", ")
-          );
-        }
-      });
-
-      function showError(message) {
-        console.error("❌", message);
-        const loading = document.getElementById("loading");
-        const error = document.getElementById("error");
-
-        if (loading) loading.style.display = "none";
-        if (error) {
-          error.innerHTML = "<h2>CMS Loading Error</h2><p>" + message + "</p>";
-          error.style.display = "block";
-        }
+        });
       }
 
-      // Fallback: if nothing works after 5 seconds, show error
-      setTimeout(() => {
-        if (document.getElementById("loading").style.display !== "none") {
-          showError("CMS failed to load within timeout period");
-        }
-      }, 5000);
+      // CDN fallback
+      if (typeof window.CMS === "undefined") {
+        document.write(
+          '<script src="https://cdn.jsdelivr.net/npm/decap-cms@^3.0.0/dist/decap-cms.js"><\/script>'
+        );
+      }
     </script>
   </body>
 </html>
