--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>HaRié Home</title>
 
-    <!-- Netlify Identity Widget -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png" />
     <link rel="apple-touch-icon" href="assets/img/favicon.png" />
@@ -33,9 +30,7 @@
   </head>
 
   <body>
-    <!-- =========================
-         HEADER
-    ========================== -->
+    <!-- HEADER -->
     <header class="border-bottom bg-white py-3">
       <div class="container d-flex justify-content-between align-items-center">
         <a
@@ -51,16 +46,14 @@
           <h1 class="fw-bold m-0 text-dark">HaRié</h1>
         </a>
         <nav>
-          <a href="shop.html" class="btn btn-dark rounded-pill">
-            View Collection
-          </a>
+          <a href="shop.html" class="btn btn-dark rounded-pill"
+            >View Collection</a
+          >
         </nav>
       </div>
     </header>
 
-    <!-- =========================
-         HERO SECTION
-    ========================== -->
+    <!-- HERO -->
     <section class="hero position-relative">
       <img
         src="assets/img/feature.jpg"
@@ -76,15 +69,10 @@
       </div>
     </section>
 
-    <!-- =========================
-         PRODUCT PREVIEW GRID
-    ========================== -->
+    <!-- PRODUCT PREVIEW GRID -->
     <main class="container mb-5">
       <h3 class="fw-bold my-4 text-center">Explore Our Collection</h3>
-
-      <!-- Grid dynamically filled by products.js -->
       <div class="row g-4" id="homeProductGrid"></div>
-
       <div class="text-center mt-5">
         <a href="shop.html" class="btn btn-dark btn-lg rounded-pill px-4">
           Show All Products →
@@ -92,13 +80,10 @@
       </div>
     </main>
 
-    <!-- =========================
-         FOOTER
-    ========================== -->
+    <!-- FOOTER -->
     <footer class="harie-footer mt-auto">
       <div class="container">
         <div class="row gy-4">
-          <!-- Quick Links -->
           <div class="col-md-4">
             <h5 class="fw-bold text-uppercase">Quick Links</h5>
             <ul class="list-unstyled">
@@ -109,7 +94,6 @@
             </ul>
           </div>
 
-          <!-- Contact -->
           <div class="col-md-4">
             <h5 class="fw-bold text-uppercase">Contact</h5>
             <ul class="list-unstyled">
@@ -131,7 +115,6 @@
             </ul>
           </div>
 
-          <!-- Follow -->
           <div class="col-md-4">
             <h5 class="fw-bold text-uppercase">Follow</h5>
             <ul class="list-unstyled">
@@ -148,24 +131,9 @@
       </div>
     </footer>
 
-    <!-- =========================
-         SCRIPTS
-    ========================== -->
+    <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/products.js"></script>
-
-    <!-- Netlify Identity Redirect Handler -->
-    <script>
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", (user) => {
-          if (!user) {
-            window.netlifyIdentity.on("login", () => {
-              document.location.href = "/admin/";
-            });
-          }
-        });
-      }
-    </script>
   </body>
 </html>
