--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         alt="Featured Outfit"
       />
       <div class="hero-overlay position-absolute">
-        <h4 class="fw-bold mb-1">Shop What’s In Store • Order What You Want</h4>
+        <h4 class="fw-bold mb-1">Shop What's In Store • Order What You Want</h4>
         <p>
           HaRié makes fashion easy. Browse, pick, visit us and wear your
           favourite design.
