--- a/admin/index.html
+++ b/admin/index.html
@@ -11,7 +11,7 @@
       }
       body {
         margin: 0;
-        padding: 20px;
+        padding: 0;
         min-height: 100vh;
       }
       #nc-root {
@@ -19,20 +19,13 @@
       }
     </style>
 
-    <!-- Decap CMS -->
+    <!-- Load Decap CMS from primary CDN -->
     <script src="https://unpkg.com/decap-cms@^3.8.4/dist/decap-cms.js"></script>
   </head>
 
   <body>
     <div id="nc-root"></div>
 
-    <!-- CDN Fallback -->
-    <script>
-      if (typeof window.CMS === "undefined") {
-        document.write(
-          '<script src="https://cdn.jsdelivr.net/npm/decap-cms@^3.8.4/dist/decap-cms.js"><\/script>'
-        );
-      }
-    </script>
+    <!-- Remove the document.write fallback - it's causing the errors -->
   </body>
 </html>
