--- a/admin/index.html
+++ b/admin/index.html
@@ -4,35 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HaRié CMS</title>
-
     <style>
-      * {
-        box-sizing: border-box;
-      }
       body {
         margin: 0;
         padding: 20px;
         min-height: 100vh;
       }
-      #nc-root {
-        display: block;
-      }
     </style>
-
-    <!-- Decap CMS -->
-    <script src="https://unpkg.com/decap-cms@^3.8.4/dist/decap-cms.js"></script>
   </head>
-
   <body>
     <div id="nc-root"></div>
 
-    <!-- CDN Fallback -->
-    <script>
-      if (typeof window.CMS === "undefined") {
-        document.write(
-          '<script src="https://cdn.jsdelivr.net/npm/decap-cms@^3.8.4/dist/decap-cms.js"><\/script>'
-        );
-      }
-    </script>
+    <!-- Load Decap CMS once, after the DOM exists -->
+    <script src="https://unpkg.com/decap-cms@3.8.4/dist/decap-cms.js"></script>
   </body>
 </html>
